<resources>
    <string name="app_label">Yash Raj</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_map">Map</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="open_weather_api_key">a74cda793fe3308570cff6e52103fdfe</string>

    <string name="history_fragment_checkpoint_list_item_you_were_here"><b>You were here: </b></string>
    <string name="history_fragment_checkpoint_list_item_latitude"><b>Latitude: </b></string>
    <string name="history_fragment_checkpoint_list_item_longitude"><b>Longitude: </b></string>
    <string name="history_fragment_checkpoint_list_item_temp"><b>Temperature: </b></string>
    <string name="history_fragment_checkpoint_list_item_weather"><b>Weather: </b></string>

    <string name="settings_fragment_locations_database_label"><b>Locations Database</b></string>
    <string name="settings_fragment_save_location_to_database_option">Save locations to database</string>
    <string name="settings_fragment_delete_database_option">Delete database</string>

    <string name="app_name">WeathrTrackr</string>
    <string name="developed_by_label"><b>Developed By</b></string>
    <string name="developer_name">Yash Raj</string>
    <string name="app_version_label"><b>Version</b></string>
    <string name="app_version">Alpha-0.0.1</string>
    <string name="about_label"><b>About</b></string>
    <string name="about">This app will query the weather at your current location when you press the Floating Action Button (FAB). Your location is plotted on to a map. Clicking on the marker will display the time that you checked in at that location and the weather at the time of check in. This information is presented to you in the form of a Snackbar at the bottom of the screen.</string>
</resources>